@@ -11,7 +11,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Test;
 
@@ -23,7 +22,7 @@ class RepositoryUriTest {
 
     @Test
     void testValidUrlWithGit() {
-        String urlString = "https://artemis.cit.tum.de/git/key/key-repositoryslug.git";
+        String urlString = "https://artemis.tum.de/git/key/key-repositoryslug.git";
 
         assertThatCode(() -> {
             LocalVCRepositoryUri uri = new LocalVCRepositoryUri(urlString);
@@ -40,32 +39,32 @@ class RepositoryUriTest {
 
     @Test
     void testUrlWithoutGit() {
-        String urlString = "https://artemis.cit.tum.de/key/key-repositoryslug.git";
+        String urlString = "https://artemis.tum.de/key/key-repositoryslug.git";
         assertThatThrownBy(() -> new LocalVCRepositoryUri(urlString)).isInstanceOf(LocalVCInternalException.class)
                 .hasMessageContaining("Invalid local VC Repository URI: 'git' directory not found in the URL");
     }
 
     @Test
     void testUrlWithInsufficientSegments() {
-        String urlString = "https://artemis.cit.tum.de/git/key";
+        String urlString = "https://artemis.tum.de/git/key";
         assertThatThrownBy(() -> new LocalVCRepositoryUri(urlString)).isInstanceOf(LocalVCInternalException.class)
                 .hasMessageContaining("URL does not contain enough segments after 'git'");
     }
 
     @Test
     void testUrlRepositorySlugWithoutGitSuffix() {
-        String urlString = "https://artemis.cit.tum.de/git/key/key-repositoryslug";
+        String urlString = "https://artemis.tum.de/git/key/key-repositoryslug";
         assertThatThrownBy(() -> new LocalVCRepositoryUri(urlString)).isInstanceOf(LocalVCInternalException.class)
                 .hasMessageContaining("Repository slug segment 'key-repositoryslug' does not end with '.git'");
     }
 
     @Test
     void testLocalRepositoryPath() throws Exception {
-        Path repositoryPath = Paths.get("/local/path/projectX/projectX-repo/.git");
-        URL localVCServerUrl = new URI("https://artemis.cit.tum.de").toURL();
+        Path repositoryPath = Path.of("/local/path/projectX/projectX-repo/.git");
+        URL localVCServerUrl = new URI("https://artemis.tum.de").toURL();
         LocalVCRepositoryUri uri = new LocalVCRepositoryUri(repositoryPath, localVCServerUrl);
 
-        assertThat(uri.getURI().toString()).isEqualTo("https://artemis.cit.tum.de/git/projectX/projectX-repo.git");
+        assertThat(uri.getURI().toString()).isEqualTo("https://artemis.tum.de/git/projectX/projectX-repo.git");
         assertThat(uri.getProjectKey()).isEqualTo("projectX");
         assertThat(uri.repositorySlug()).isEqualTo("projectX-repo");
         assertThat(uri.getRepositoryTypeOrUserName()).isEqualTo("repo");
@@ -74,11 +73,11 @@ class RepositoryUriTest {
 
     @Test
     void testRemoteRepositoryPath() throws Exception {
-        Path repositoryPath = Paths.get("/remote/path/projectY/projectY-repo");
-        URL localVCServerUrl = new URI("https://artemis.cit.tum.de").toURL();
+        Path repositoryPath = Path.of("/remote/path/projectY/projectY-repo");
+        URL localVCServerUrl = new URI("https://artemis.tum.de").toURL();
         LocalVCRepositoryUri uri = new LocalVCRepositoryUri(repositoryPath, localVCServerUrl);
 
-        assertThat(uri.getURI().toString()).isEqualTo("https://artemis.cit.tum.de/git/projectY/projectY-repo.git");
+        assertThat(uri.getURI().toString()).isEqualTo("https://artemis.tum.de/git/projectY/projectY-repo.git");
         assertThat(uri.getProjectKey()).isEqualTo("projectY");
         assertThat(uri.repositorySlug()).isEqualTo("projectY-repo");
         assertThat(uri.getRepositoryTypeOrUserName()).isEqualTo("repo");
@@ -87,10 +86,10 @@ class RepositoryUriTest {
 
     @Test
     void testInvalidRepositoryPath() {
-        Path repositoryPath = Paths.get("/invalid/path");
+        Path repositoryPath = Path.of("/invalid/path");
         URL localVCServerUrl;
         try {
-            localVCServerUrl = new URI("https://artemis.cit.tum.de").toURL();
+            localVCServerUrl = new URI("https://artemis.tum.de").toURL();
             assertThatThrownBy(() -> new LocalVCRepositoryUri(repositoryPath, localVCServerUrl)).isInstanceOf(LocalVCInternalException.class)
                     .hasMessageContaining("Invalid project key and repository slug: invalid, path");
         }
@@ -103,28 +102,28 @@ class RepositoryUriTest {
     void testConstructorWithValidData() throws Exception {
         String projectKey = "projectX";
         String repositorySlug = "my-repo";
-        URL localVCBaseUrl = new URI("https://artemis.cit.tum.de").toURL();
+        URL localVCBaseUrl = new URI("https://artemis.tum.de").toURL();
 
         LocalVCRepositoryUri uri = new LocalVCRepositoryUri(projectKey, repositorySlug, localVCBaseUrl);
 
         assertThat(uri.getProjectKey()).isEqualTo(projectKey);
         assertThat(uri.getRepositoryTypeOrUserName()).isEqualTo(repositorySlug);
         assertThat(uri.isPracticeRepository()).isFalse();
-        assertThat(uri.getURI().toString()).isEqualTo("https://artemis.cit.tum.de/git/projectX/my-repo.git");
+        assertThat(uri.getURI().toString()).isEqualTo("https://artemis.tum.de/git/projectX/my-repo.git");
     }
 
     @Test
     void testConstructorWithPracticeRepository() throws Exception {
         String projectKey = "projectX";
         String repositorySlug = "projectX-practice-my-repo";
-        URL localVCBaseUrl = new URI("https://artemis.cit.tum.de").toURL();
+        URL localVCBaseUrl = new URI("https://artemis.tum.de").toURL();
 
         LocalVCRepositoryUri uri = new LocalVCRepositoryUri(projectKey, repositorySlug, localVCBaseUrl);
 
         assertThat(uri.getProjectKey()).isEqualTo(projectKey);
         assertThat(uri.getRepositoryTypeOrUserName()).isEqualTo("my-repo");
         assertThat(uri.isPracticeRepository()).isTrue();
-        assertThat(uri.getURI().toString()).isEqualTo("https://artemis.cit.tum.de/git/projectX/projectX-practice-my-repo.git");
+        assertThat(uri.getURI().toString()).isEqualTo("https://artemis.tum.de/git/projectX/projectX-practice-my-repo.git");
     }
 
     @Test
@@ -166,7 +165,7 @@ class RepositoryUriTest {
 
     @Test
     void testConstructorWithFile() {
-        File file = new File("/path/to/repo");
+        File file = Path.of("/path/to/repo").toFile();
         VcsRepositoryUri uri = new VcsRepositoryUri(file);
         assertThat(uri.getURI().toString()).isEqualTo(file.toURI().toString());
     }
